# opencode-optimisations

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.claude/agents/: plan-review.md
.opencode/: .gitignore  README.md
.opencode/tools/: codemode.ts  edit.ts  grep.ts  localize.ts  read.ts
docs/: codemode-setup.md  formal-verifier-research.md  harness-engineering-research.md  item20-20.3-results.md  item20-smoke-notes.md  item24-feasibility-notes.md  item28-lean-probe-notes.md  jaeger-tracing.md  local-inference-engines-research.md  local-model-throughput-research.md  opencode-config.md  opencode-local.md  orchestration-planning-research.md  sandbox-codeexec-research.md  small-model-research.md  small-model-selection-research-v2.md  small-model-selection-research.md  structured-optimisation-research.md  tiered-harness.md
scripts/: codegen_probe.py  codegen_probe_targets.json  codemode_ab.py  codemode_exec.py  codemode_niche_ab.py  codemode_prod_ab.py  harness_eval.py  harness_eval_subset.json  harness_micro.py  localize_repro.py  localize_repro_test.py  mlx.sh  mlx_bench.py  mlx_repair_proxy.py  omlx.sh  omlx_repair_proxy.py  omlx_repair_proxy_test.py  patch_otel_plugin.py  recommender_proposer_prompt.md  recommender_sample_proposal.json  run_t3_clean.sh
scripts/harness_configs/: SERVE-RECIPES-item24.md  baseline.json  e2e-temp0.json  gepa-t3-a-engage.json  gepa-t3-b-commit.json  gepa-t3-c-verify.json  gepa-t3-d-cand2port.json  loop-control.json  low-temp.json  minimal-toolset.json  model-qwen3.5-4b.json  model-qwen3.5-9b.json  (+15 more)
(+23 files in other folders)
