[project]
name = "opencode-optimisations"
version = "0.1.0"
description = "Local opencode + Gemma 4 QAT (MLX) coding-agent stack: serving controller, tool-call repair proxy, Jaeger/OTel tracing, token-reduction opencode tools, and throughput / pass-fail / tool-call-fidelity measurement instruments."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Savio Rozario" }]
license = { text = "MIT" }
# The scripts/ harness + bench instruments are stdlib-only by design; mlx-lm
# itself runs isolated via `uvx` (never imported), so there are no runtime
# dependencies here. The tooling below mirrors the originating repo's gate.
dependencies = []

# This project ships scripts/ + .opencode/ + docs/, not an importable package,
# so uv manages the venv + dev tooling without building a wheel.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[tool.ruff]
line-length = 100
src = ["scripts"]
# Synthetic fixtures the micro-suite operates on — deliberately arranged code,
# not project source. Not linted/type-checked.
extend-exclude = ["scripts/harness_micro_fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
exclude = ["scripts/harness_micro_fixtures/"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
addopts = "-ra"
python_files = ["*_test.py", "test_*.py"]
